# batch_renamer

./: .gitignore  CHANGELOG.md  README.md  batch_renamer.py  manual.md  pyproject.toml  resources.py  resources.qrc
QT_files/: AboutWindow.ui  MainWindow.ui  ManualWindow.ui
app/: AboutUI.py  MainUI.py  ManualUI.py  controller.py
