[tool.poetry]
name = "batch-renamer"
version = "0.1.0"
description = ""
authors = ["scbmark <scbmark@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pyside6 = "^6.5.2"
certifi = "^2023.7.22"
pyqtdarktheme = "^2.1.0"

[tool.poetry.group.dev.dependencies]
nuitka = "^1.8"

[tool.black]
line-length = 100

[tool.isort]
profile = 'black'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
